--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h2>Great Grocery List</h2>
+        <h2>Grocery List</h2>
         <input type="text" id="myInput" placeholder="Type item...">
         <button onclick="saveText()">Save</button>
 
