--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h2>Grocery List</h2>
-        <input type="text" id="myInput" placeholder="Type item...">
-        <button onclick="saveText()">Save</button>
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Grocery List</title>
+</head>
+<body>
 
+<div class="container">
+    <h1>Grocery List</h1>
+    <input type="text" id="addItemInput" placeholder="Add item...">
+    <button>Add to List</button>
+    <ul id="groceryList"></ul>
+</div>
 
-
-
-
-        <script src="app.js"></script>
-    </body>
+<script src="script.js"></script>
+</body>
 </html>
