--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <title>Grocery List</title>
 </head>
+
 <body>
 
-<div class="container">
-    <h1>Grocery List</h1>
-    <input type="text" id="addItemInput" placeholder="Add item...">
-    <button>Add to List</button>
-    <ul id="groceryList"></ul>
-</div>
+    <div class="container">
+        <h1>Grocery List</h1>
+        <input type="text" id="addItemInput" placeholder="Add item...">
+        <button>Add to List</button>
+        <ul id="groceryList"></ul>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
